# AprilTag3_CPP

./: README.md
example/: CMakeLists.txt  example.cpp
lib/: libapriltag.so.3
